added repo and service layers
