# pkg/banner-api/oas_handlers_gen.go
@@ -22,7 +22,8 @@ import (
 
 // handleCreateBannerRequest handles createBanner operation.
 //
-// Создание нового баннера.
+// Создание баннера происходит в транзакции с уровнем
+// изоляции ReadCommitted. Доступно только админам.
 //
 // POST /banner
 func (s *Server) handleCreateBannerRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
@@ -172,7 +173,8 @@ func (s *Server) handleCreateBannerRequest(args [0]string, argsEscaped bool, w h
 
 // handleDeleteBannerRequest handles deleteBanner operation.
 //
-// Удаление баннера по идентификатору.
+// Удаление баннера по его идентификатору. Доступно
+// только админам.
 //
 // DELETE /banner/{id}
 func (s *Server) handleDeleteBannerRequest(args [1]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
@@ -322,7 +324,11 @@ func (s *Server) handleDeleteBannerRequest(args [1]string, argsEscaped bool, w h
 
 // handleGetBannerRequest handles getBanner operation.
 //
-// Получение баннера для пользователя.
+// Получение баннера для пользователя в виде чистого JSON,
+// который находится по feature_id и tag_id.  По умолчанию из
+// базы возвращается самая последняя версия.  При
+// использовании флага use_last_revision данные баннера
+// возвращаются из резидентной БД.
 //
 // GET /user_banner
 func (s *Server) handleGetBannerRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
@@ -480,8 +486,11 @@ func (s *Server) handleGetBannerRequest(args [0]string, argsEscaped bool, w http
 
 // handleGetBannersRequest handles getBanners operation.
 //
-// Получение всех баннеров c фильтрацией по фиче и/или
-// тегу.
+// Получение данных о баннерах для админов c фильтрацией
+// по фиче и/или тегу и возможностью ограничить
+// количество баннеров.  По умолчанию количество
+// возвращаемых баннеров равняется 1000. Доступно только
+// админам.
 //
 // GET /banner
 func (s *Server) handleGetBannersRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
@@ -643,7 +652,9 @@ func (s *Server) handleGetBannersRequest(args [0]string, argsEscaped bool, w htt
 
 // handleSetBannerRequest handles setBanner operation.
 //
-// Обновление содержимого баннера.
+// Обновление баннера, поля тела запроса опциональны.
+// При обновлении создается новая версия и изменяются
+// прежние. Доступно только админам.
 //
 // PATCH /banner/{id}
 func (s *Server) handleSetBannerRequest(args [1]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
