# pkg/banner-api/oas_server_gen.go
@@ -10,32 +10,43 @@ import (
 type Handler interface {
 	// CreateBanner implements createBanner operation.
 	//
-	// Создание нового баннера.
+	// Создание баннера происходит в транзакции с уровнем
+	// изоляции ReadCommitted. Доступно только админам.
 	//
 	// POST /banner
 	CreateBanner(ctx context.Context, req *CreateBannerRequest) (CreateBannerRes, error)
 	// DeleteBanner implements deleteBanner operation.
 	//
-	// Удаление баннера по идентификатору.
+	// Удаление баннера по его идентификатору. Доступно
+	// только админам.
 	//
 	// DELETE /banner/{id}
 	DeleteBanner(ctx context.Context, params DeleteBannerParams) (DeleteBannerRes, error)
 	// GetBanner implements getBanner operation.
 	//
-	// Получение баннера для пользователя.
+	// Получение баннера для пользователя в виде чистого JSON,
+	// который находится по feature_id и tag_id.  По умолчанию из
+	// базы возвращается самая последняя версия.  При
+	// использовании флага use_last_revision данные баннера
+	// возвращаются из резидентной БД.
 	//
 	// GET /user_banner
 	GetBanner(ctx context.Context, params GetBannerParams) (GetBannerRes, error)
 	// GetBanners implements getBanners operation.
 	//
-	// Получение всех баннеров c фильтрацией по фиче и/или
-	// тегу.
+	// Получение данных о баннерах для админов c фильтрацией
+	// по фиче и/или тегу и возможностью ограничить
+	// количество баннеров.  По умолчанию количество
+	// возвращаемых баннеров равняется 1000. Доступно только
+	// админам.
 	//
 	// GET /banner
 	GetBanners(ctx context.Context, params GetBannersParams) (GetBannersRes, error)
 	// SetBanner implements setBanner operation.
 	//
-	// Обновление содержимого баннера.
+	// Обновление баннера, поля тела запроса опциональны.
+	// При обновлении создается новая версия и изменяются
+	// прежние. Доступно только админам.
 	//
 	// PATCH /banner/{id}
 	SetBanner(ctx context.Context, req *SetBannerRequest, params SetBannerParams) (SetBannerRes, error)
